force-app/main/default/objects/Contact/fields/AccidentDateSearch__c.field-meta.xml
<CustomField>
    <fullName>AccidentDateSearch__c</fullName>
    <label>事故日（検索）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>