force-app/main/default/objects/Contact/fields/CallerContactInformation2__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInformation2__c</fullName>
    <label>入電者の連絡先２</label>
    <type>Phone</type>
</CustomField>