force-app/main/default/objects/Contact/fields/FormType__c.field-meta.xml
<CustomField>
    <fullName>FormType__c</fullName>
    <label>帳票種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故受付（自動車）</fullName>
            </value>
            <value>
                <fullName>事故受付（傷害）</fullName>
            </value>
            <value>
                <fullName>事故受付（賠償）</fullName>
            </value>
            <value>
                <fullName>事故受付（物損）</fullName>
            </value>
            <value>
                <fullName>事故受付（携行品/用品）</fullName>
            </value>
            <value>
                <fullName>事故受付（第三分野）</fullName>
            </value>
            <value>
                <fullName>事故受付（ヨット）</fullName>
            </value>
            <value>
                <fullName>事故受付（日整連）</fullName>
            </value>
            <value>
                <fullName>事故受付（その他）</fullName>
            </value>
            <value>
                <fullName>伝言</fullName>
            </value>
            <value>
                <fullName>雑件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>