force-app/main/default/objects/Contact/fields/IncomingCallTime__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallTime__c</fullName>
    <label>第一報入電時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>