force-app/main/default/objects/Contact/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>回線</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S66 Jiko Jidousya</fullName>
            </value>
            <value>
                <fullName>S325 Oosaka Jiko  Jidousha</fullName>
            </value>
            <value>
                <fullName>S186 Jiko Rescue</fullName>
            </value>
            <value>
                <fullName>S67 Jiko Kashin</fullName>
            </value>
            <value>
                <fullName>S327 Oosaka Jiko Kashin</fullName>
            </value>
            <value>
                <fullName>S84 Nougyou Daigaku</fullName>
            </value>
            <value>
                <fullName>S88 Nougyou Kyousai</fullName>
            </value>
            <value>
                <fullName>S131 JA Anshin Jiko</fullName>
            </value>
            <value>
                <fullName>S331 Oosaka JA Anshin Jikouke</fullName>
            </value>
            <value>
                <fullName>S79 Dairiten Jikouke</fullName>
            </value>
            <value>
                <fullName>S138 Direct Mail Jikouke</fullName>
            </value>
            <value>
                <fullName>S150 Kenkousoudan</fullName>
            </value>
            <value>
                <fullName>S156 Osusume Seikyo</fullName>
            </value>
            <value>
                <fullName>S223 PTAJikouke</fullName>
            </value>
            <value>
                <fullName>S54 Madohan</fullName>
            </value>
            <value>
                <fullName>S329 Oosaka Madohan</fullName>
            </value>
            <value>
                <fullName>S113 Shinkin Tsumikin</fullName>
            </value>
            <value>
                <fullName>S191 Telema</fullName>
            </value>
            <value>
                <fullName>S262 Customer Jikouke112</fullName>
            </value>
            <value>
                <fullName>S193 Customer Jikouke250</fullName>
            </value>
            <value>
                <fullName>S195 Hokenkin Sodan112</fullName>
            </value>
            <value>
                <fullName>S197 Hokenkin Sodan250</fullName>
            </value>
            <value>
                <fullName>S16 Daihyoubangou</fullName>
            </value>
            <value>
                <fullName>S134 Kyoudou Nyugyou</fullName>
            </value>
            <value>
                <fullName>S136 Kyoudou Nyugyou Unknown</fullName>
            </value>
            <value>
                <fullName>S68 Jiko Unknown</fullName>
            </value>
            <value>
                <fullName>S77 Jiko Uketsuke C</fullName>
            </value>
            <value>
                <fullName>S180 Tci Orikaeshi</fullName>
            </value>
            <value>
                <fullName>S69　Jiko Saigai</fullName>
            </value>
            <value>
                <fullName>S318 JishinSaigai077</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>