force-app/main/default/objects/Contact/fields/LineData__c.field-meta.xml
<CustomField>
    <fullName>LineData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回線</label>
    <referenceTo>CallDataLine__c</referenceTo>
    <relationshipLabel>事故</relationshipLabel>
    <relationshipName>CallData</relationshipName>
    <type>Lookup</type>
</CustomField>