force-app/main/default/objects/Contact/fields/LineDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>LineDefaultValue__c</fullName>
    <formula>MID(TEXT(  Line__c ), 2, FIND(&quot; &quot;,TEXT(  Line__c )) - 1)</formula>
    <label>回線（入力番号）</label>
    <type>Text</type>
</CustomField>