force-app/main/default/objects/Contact/fields/NameKana__c.field-meta.xml
<CustomField>
    <fullName>NameKana__c</fullName>
    <label>氏名(カナ)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>