force-app/main/default/objects/Contact/fields/OtherContractorsCheak__c.field-meta.xml
<CustomField>
    <fullName>OtherContractorsCheak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>他契約者有</label>
    <type>Checkbox</type>
</CustomField>