force-app/main/default/objects/Contact/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label>証券番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>