force-app/main/default/objects/Contact/fields/RegisteredPhoneNumber1__c.field-meta.xml
<CustomField>
    <fullName>RegisteredPhoneNumber1__c</fullName>
    <label>登録の電話番号</label>
    <type>Phone</type>
</CustomField>