force-app/main/default/objects/Contact/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（親）契約者・入電者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>契約者・入電者</relationshipLabel>
    <relationshipName>Related</relationshipName>
    <type>Lookup</type>
</CustomField>