force-app/main/default/objects/Contact/fields/RelationshipFree__c.field-meta.xml
<CustomField>
    <fullName>RelationshipFree__c</fullName>
    <label>入電者と契約者の関係 フリー入力</label>
    <length>255</length>
    <type>Text</type>
</CustomField>