force-app/main/default/objects/Contact/fields/TelHome__c.field-meta.xml
<CustomField>
    <fullName>TelHome__c</fullName>
    <label>Tel（自宅）</label>
    <type>Phone</type>
</CustomField>