force-app/main/default/objects/Contact/fields/TelWork__c.field-meta.xml
<CustomField>
    <fullName>TelWork__c</fullName>
    <label>Tel（勤務先）</label>
    <type>Phone</type>
</CustomField>