force-app/main/default/objects/Contact/fields/VoiceLogURL__c.field-meta.xml
<CustomField>
    <fullName>VoiceLogURL__c</fullName>
    <label>音声ログURL</label>
    <type>Url</type>
</CustomField>