force-app/main/default/objects/Contact/recordTypes/CallDataRecordType.recordType-meta.xml
<RecordType>
    <fullName>CallDataRecordType</fullName>
    <active>true</active>
    <label>コールデータ</label>
</RecordType>