force-app/main/default/objects/Contact/validationRules/ChkFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkFirstName</fullName>
    <active>false</active>
    <errorConditionFormula>IF ( ISBLANK (  FirstName ), FALSE, 
NOT ( OR(REGEX ( FirstName , &quot;~[ｦ-ﾟ]*$&quot; ),REGEX( FirstName , &quot;~[ァ-ー]+$&quot;) )))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>カタカナで入力してください</errorMessage>
</ValidationRule>