force-app/main/default/objects/Contact/validationRules/ChkLastName.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkLastName</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK (   FirstName ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>入電者名は「入電者名　姓」にすべて入力してください</errorMessage>
</ValidationRule>