force-app/main/default/objects/Contact/validationRules/ChkName.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkName</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ISBLANK (  LastName )  || NOT(ISBLANK ( BedoreSessionID__c )) , FALSE, 
NOT ( OR(REGEX ( SUBSTITUTE(SUBSTITUTE(LastName,&apos; &apos;,&apos;&apos;),&apos;　&apos;,&apos;&apos;) , &quot;^[ｦ-ﾟ]*$&quot; ),REGEX( SUBSTITUTE(SUBSTITUTE(LastName,&apos; &apos;,&apos;&apos;),&apos;　&apos;,&apos;&apos;) , &quot;^[ァ-ー]+$&quot;) ) ))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>カタカナで入力してください</errorMessage>
</ValidationRule>