force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CallerContactInformation1__c</columns>
    <columns>ContractorName__c</columns>
    <columns>RegisteredPhoneNumber1__c</columns>
    <columns>PolicyNumber__c</columns>
    <columns>IncomingCallDay__c</columns>
    <columns>IncomingCallTime__c</columns>
    <columns>AccidentDate__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BedorePolicyNumber__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>すべてのコールデータ</label>
</ListView>