force-app/main/default/objects/Contact/listViews/Owned.listView-meta.xml
<ListView>
    <fullName>Owned</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>私が所有しているコールデータ</label>
</ListView>