force-app/main/default/objects/Contact/listViews/ThisYear.listView-meta.xml
<ListView>
    <fullName>ThisYear</fullName>
    <columns>FULL_NAME</columns>
    <columns>CallerContactInformation1__c</columns>
    <columns>ContractorName__c</columns>
    <columns>RegisteredPhoneNumber1__c</columns>
    <columns>PolicyNumber__c</columns>
    <columns>IncomingCallDay__c</columns>
    <columns>IncomingCallTime__c</columns>
    <columns>AccidentDateF__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>今年のコールデータ</label>
</ListView>